--- a/roles/galaxyprojectdotorg.devbox/tasks/main.yml
+++ b/roles/galaxyprojectdotorg.devbox/tasks/main.yml
@@ -77,4 +77,4 @@
   when: small_tool_conf
 
 - name: Add Galaxy Restart Script
-  template: src=galaxy-restart.j2 dest=/usr/bin/galaxy-restart owner=root group=rootwheel mode="u=rwx,g=rx,o=rx"
+  template: src=galaxy-restart.j2 dest=/usr/bin/galaxy-restart owner=root group=root mode="u=rwx,g=rx,o=rx"
