--- a/roles/galaxyprojectdotorg.devbox/tasks/main.yml
+++ b/roles/galaxyprojectdotorg.devbox/tasks/main.yml
@@ -80,7 +80,7 @@
   template: src=galaxy-restart.j2 dest=/usr/bin/galaxy-restart owner=root group=root mode="u=rwx,g=rx,o=rx"
 
 - name: Create /etc/galaxy
-  file: path=/etc/galaxy state=directory owner=root mode="u=r,g=r,o="
+  file: path=/etc/galaxy state=directory owner=root group=admin mode="u=rx,g=rx,o="
 
 - name: Add Galaxy API Key File
-  template: src=apikey.j2 dest=/etc/galaxy/apikey owner=root group=root mode="u=r,g=r,o="
+  template: src=api.key.j2 dest=/etc/galaxy/api.key owner=root group=admin mode="u=r,g=r,o="
