--- a/roles/dream-smc-client/tasks/main.yml
+++ b/roles/dream-smc-client/tasks/main.yml
@@ -15,3 +15,10 @@
 -
     name: Copy dream_galaxy_submit
     command: cp /opt/galaxy/SMC-Het-Challenge/dream_galaxy_submit /usr/bin/
+-
+    name: Add galaxy_lib_sync
+    template: src=galaxy_lib_sync.py.j2 dest=/opt/galaxy/galaxy_lib_sync.py owner=ubuntu group=ubuntu mode="u=rx,g=rx,o="
+- 
+    name: Add Auto Import supervisor configuration.
+    template: src=supervisor.conf.j2 dest=/etc/supervisor/conf.d/galaxy_lib_sync.conf
+
